# web_scraping_lubimyczytac

./: .flake8  .gitignore  LICENSE  README.md  config.example.ini  main.py  pyproject.toml  table_utils.py
.github/workflows/: python-app.yml
dane/: books_enriched.csv  goodreads.csv
data_io/: __init__.py  csv_utils.py
models/: __init__.py  book.py
scraper/: __init__.py  book_details.py  enrichment.py  profile_scraper.py
tests/: __init__.py  conftest.py  test_sample.py  test_scraper.py  test_table_utils.py
