[project]
name = "web-scraping-lubimyczytac"
version = "0.1.0"
description = "Selenium scraper for exporting Lubimyczytac books to CSV and Goodreads format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "attrs==25.3.0",
  "beautifulsoup4==4.13.1",
  "certifi==2025.1.31",
  "cffi==1.17.1",
  "charset-normalizer==3.4.1",
  "h11==0.14.0",
  "idna==3.10",
  "outcome==1.3.0.post0",
  "pycparser==2.22",
  "pysocks==1.7.1",
  "requests==2.32.3",
  "selenium==4.30.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.6",
  "trio==0.29.0",
  "trio-websocket==0.12.2",
  "typing-extensions==4.13.0",
  "urllib3==2.3.0",
  "websocket-client==1.8.0",
  "wsproto==1.2.0"
]

[dependency-groups]
dev = [
  "pytest==8.0.0"
]
